--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "axios": "^0.22.0",
-    "contentful": "^9.1.34",
+    "contentful": "^9.2.5",
     "framer-motion": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
+    "@types/node": "18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.0",
