--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@types/jquery": "^3.5.14",
+    "@types/react-helmet": "^6.1.5",
     "axios": "^0.22.0",
     "contentful": "^9.2.5",
     "framer-motion": "^7.5.3",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.0"
   },
